# opticd

./: .gitignore  CMakeLists.txt  README.md  accessmediator.cpp  accessmediator.h  eglhelper.cpp  eglhelper.h  hybriscamerasource.cpp  hybriscamerasource.h  main.cpp  qtcamerasource.cpp  qtcamerasource.h  v4l2loopbacksink.cpp  v4l2loopbacksink.h
aux/service/: opticd.conf
aux/sysctl/: 50-opticd.conf
aux/udev/: 50-opticd.rules
debian/: changelog  control  postinst  rules
service/: opticd.conf
snap/: snapcraft.yaml
src/: accessmediator.cpp  accessmediator.h  eglhelper.cpp  eglhelper.h  hybriscamerasource.cpp  hybriscamerasource.h  main.cpp  v4l2loopbacksink.cpp  v4l2loopbacksink.h
